[BISERVER-9452] -- update to mantle for onyx for ie8 styles on backgrounds

--- a/user-console/source/org/pentaho/mantle/public/themes/onyx/mantleOnyx.css
+++ b/user-console/source/org/pentaho/mantle/public/themes/onyx/mantleOnyx.css
@@ -1,3 +1,8 @@
+.IE8 #adminContentPanel,
+.IE8 #adminCatTree,
+.IE8 .schedulerPerspective-wrapper {
+  background: url('images/wt_transparent.png') repeat;
+}
 #adminContentPanel {
   margin-left: 20px;
   padding: 10px;
